# tokenprice

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: stale.yml
.github/workflows/: pre-commit.yml  release.yml  test.yml
AGENTS-docs/: CLI-design.md  caching-and-async.md  contribution-checklist.md  testing-guidelines.md  workflow.md
docs/: workflow-diagram.md
examples/: compute_cost_openai_gpt_5.2_codex.py  compute_cost_sync.py  get_pricing_anthropic_claude_4.5_haiku.py  get_pricing_anthropic_claude_4.5_haiku_GBP.py  get_pricing_openai_gpt_5.2.py  get_pricing_openai_gpt_5.2_EUR.py  get_pricing_openai_gpt_5.2_sync.py  get_pricing_z_ai_glm_4.7_CNY.py  get_pricing_z_ai_glm_4.7_RMB.py  langsmith_cost_tracking.py  main.py  openai_completions_response.py
llmtracker/: README.md  pyproject.toml
llmtracker/.github/workflows/: alerts.yml  deploy.yml  scrape.yml
llmtracker/data/: README.md
llmtracker/scripts/: detect_changes.py  normalize.py  scrape.py  send_alerts.py
llmtracker/website/data/: README.md
src/tokenprice/: __init__.py  cache.py  commandline.py  core.py  currency.py  matching.py  modeling.py  pricing.py  suggestions.py
tests/: test_core.py  test_matching.py  test_modeling.py  test_suggestions.py
