[project]
name = "tokenprice"
version = "0.1.0"
description = "API pricing estimates for 1k+ LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "unit: Unit tests (no external dependencies)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[project.scripts]
tokenprice = "tokenprice:__main__"
